# thrax

./: README.md
Thrax/: AUTHORS  BUILD.bazel  Makefile.am  Makefile.in  NEWS  README  WORKSPACE.bazel  configure  configure.ac
Thrax/src/: Makefile.in
Thrax/src/bazel/: Makefile.in
Thrax/src/grammars/: Makefile.in  bytestringcopy.grm
Thrax/src/include/: Makefile.am  Makefile.in
Thrax/src/include/thrax/: abstract-grm-manager.h  arcsort.h  assert-empty.h  assert-equal.h  assert-null.h  cdrewrite.h  closure.h  collection-node.h  compiler.h  compose.h  concat.h  datatype.h  determinize.h  difference.h  evaluator.h  expand.h  features.h  fst-node.h  function-node.h  function.h  grammar-node.h  grm-compiler.h  grm-manager.h  identifier-counter.h  identifier-node.h  import-node.h  invert.h  lenientlycompose.h  lexer.h  loadfst.h  loadfstfromfar.h  make-parens-pair-vector.h  minimize.h  mpdtcompose.h  namespace.h  node.h  optimize.h  paradigm.h  pdtcompose.h  printer.h  (+17 more)
Thrax/src/include/thrax/algo/: cdrewrite.h  checkprops.h  concatrange.h  cross.h  crossproduct.h  lenientlycompose.h  optimize.h  paths.h  prefix_tree.h  resource-map.h  sigma_star.h  stringcompile.h  stringfile.h  stringmap.h  stringprint.h  stringutil.h  stripcomment.h
Thrax/src/include/thrax/compat/: utils.h
Thrax/src/lib/: Makefile.am  Makefile.in  parser.cc
Thrax/src/lib/ast/: collection-node.cc  fst-node.cc  function-node.cc  grammar-node.cc  identifier-node.cc  import-node.cc  node.cc  return-node.cc  rule-node.cc  statement-node.cc  string-node.cc
Thrax/src/lib/flags/: flags.cc
Thrax/src/lib/main/: compiler-log.cc  compiler-log64.cc  compiler-stdarc.cc  grm-compiler.cc  grm-manager.cc  lexer.cc  parser.cc  parser.yy
Thrax/src/lib/util/: stringcompile.cc  stringfile.cc  stringutil.cc  stripcomment.cc  utils.cc
Thrax/src/lib/walker/: evaluator-specializations.cc  identifier-counter.cc  loader.cc  namespace.cc  printer.cc  stringfst.cc  symbols.cc  walker.cc
Thrax/src/utils/: Makefile.in  thrax-mode.el  thraxgrm.vim
tools/: fetch.sh
