# Copyright 2015-2020 Google LLC.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Bazel (https://bazel.build/) workspace.

workspace(name = "org_opengrm_thrax")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# -------------------------------------------------------------------------
# Abseil C++: See
#    https://github.com/abseil/abseil-cpp
# -------------------------------------------------------------------------

http_archive(
    name = "io_abseil_cpp",
    strip_prefix = "abseil-cpp-master",
    urls = ["https://github.com/abseil/abseil-cpp/archive/master.zip"],
)

# -------------------------------------------------------------------------
# Google testing framework. See
#    https://github.com/google/googletest
# -------------------------------------------------------------------------

http_archive(
    name = "com_google_googletest",
    strip_prefix = "googletest-master",
    urls = ["https://github.com/google/googletest/archive/master.zip"],
)

# -------------------------------------------------------------------------
# OpenFst: See
#    http://www.openfst.org/twiki/pub/FST/FstDownload/README
# -------------------------------------------------------------------------

openfst_version = "1.7.10-rc1"

http_archive(
    name = "org_openfst",
    urls = ["https://github.com/agutkin/finite_state/raw/main/openfst-%s.tar.gz" % openfst_version],
    sha256 = "ca7d7a86c867ee14052a26a5476fa27dcae4570ccca85d2c0efa0e992ddd6eb4",
    strip_prefix = "openfst-%s" % openfst_version
)
